# cover-art-downloader

./: Cargo.toml  README.md
src/: ext.rs  main.rs
src/data/: artist.rs  cover.rs  mod.rs  release_group.rs
